--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://oil-ramp-cat.github.io"
+url: "https://oil-lamp-cat.github.io"
 
 github:
-  username: oil-ramp-cat # change to your github username
+  username: oil-lamp-cat # change to your github username
 
 twitter:
   username: twitter_username # change to your twitter username
@@ -41,7 +41,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/oil-ramp-cat # change to your github homepage
+    - https://github.com/oil-lamp-cat # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
