--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: # fill in to your verification string
+google_site_verification: 5ohI6qd3jMgBofC1vcwNKZUBYf_htnc0f9LUu-JXrVs
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
