--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ timezone: Asia/Seoul
 
 title: 호롱고양이의 개발일지 # the main title
 
-tagline: 개발자가 되고 싶은 고양이 # it will display as the sub-title
+tagline: 개발자가 되고 싶은 ᓚᘏᗢ # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   초보 개발자 고양이 <나만 없어 고양이>
